--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="format-detection" content="telephone=no">
     <link href="https://fonts.googleapis.com/css?family=Bitter|Nunito:300,600" rel="stylesheet">
-    <link rel="stylesheet" href="/reset.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/reset.css" />
     <meta name="theme-color" content="#000000">
     <!--
       manifest.json provides metadata used when your web app is added to the
