Added Open Graph tags

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
     <meta name="msapplication-TileColor" content="#2b5797">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="format-detection" content="telephone=no">
+    <meta property="og:url"                content="http://www.annaerkers.com" />
+    <meta property="og:type"              content="website" />
+    <meta property="og:title"              content="Anna Erkers" />
+    <meta property="og:description"        content="Anna Erkers | Web Developer" />
     <link href="https://fonts.googleapis.com/css?family=Bitter|Nunito:300,600" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <link rel="stylesheet" href="%PUBLIC_URL%/reset.css" />
